Organization and stylization of the code

--- a/src/components/error-indicator/error-indicator.css
+++ b/src/components/error-indicator/error-indicator.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 .wrErrorIndicator img {
