--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: calc(100% - 30px);
   padding: 15px;
   background-color: #232f3e;
 }
