--- a/src/components/pages/page-not-found.css
+++ b/src/components/pages/page-not-found.css
@@ -2,11 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: calc(100% - 30px);
+  max-width: 1000px;
+  margin: 15px;
 }
 
 .wrPageNotFound img {
   width: 120px;
-  margin: 15px 0;
+  margin-bottom: 15px;
 }
 
 .pageNotFoundTitle {
@@ -31,17 +34,13 @@
   border-radius: 10px;
   background-color: #febd69;
   outline: none;
-  cursor: pointer;
-}
-
-.btnGoHome a,
-.btnGoHome a:focus {
   font-weight: bold;
   color: #232f3e;
   text-decoration: none;
+  cursor: pointer;
 }
 
-.btnGoHome:hover a {
+.btnGoHome:hover {
   color: #fff;
   text-decoration: none;
 }
