--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
 @keyframes ldio-5cxnhqmo9es-1 {
